erDiagram
  users ||--o{ group_members : "所属"
  users ||--o{ group_leaders : "リーダー"
  groups ||--o{ group_members : "メンバー"
  groups ||--o{ group_leaders : "リーダー"
  groups ||--o{ projects : "配下"
  groups ||--o{ trash_items : "ゴミ箱"
  projects ||--o{ folders : "ツリー"
  folders ||--o{ folders : "parent"
  projects ||--o{ files : "ファイル"
  folders ||--o{ files : "格納"
  users ||--o{ files : "作成者"
  users ||--o{ audit_logs : "操作者"
  users ||--o{ sessions : "セッション"
  users ||--o{ trash_items : "削除者"
